--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "timezone-date",
-  "version": "1.0.0",
+  "name": "timezone-date.ts",
+  "version": "0.1.0",
   "description": "Enhancement of Date class with better timezone support",
   "keywords": [
     "timezone",
