--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@types/node": "*",
     "husky": "^4.2.5",
+    "minify": "^6.0.1",
     "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
     "ts-node": "^8.9.0",
